--- a/src/components/Modal.module.css
+++ b/src/components/Modal.module.css
@@ -28,3 +28,8 @@
   right: 16px;
   cursor: pointer;
 }
+
+.close:focus-visible {
+  outline: 2px solid var(--color-focus);
+  outline-offset: 2px;
+}
