--- a/src/components/atoms/Button.module.css
+++ b/src/components/atoms/Button.module.css
@@ -59,3 +59,12 @@
   outline: 2px solid var(--color-focus);
   outline-offset: 2px;
 }
+
+.button:disabled,
+.button[aria-disabled='true'] {
+  cursor: not-allowed;
+  opacity: 0.6;
+  box-shadow: none;
+  filter: none;
+  transform: none;
+}
