--- a/src/components/layout/Header.module.css
+++ b/src/components/layout/Header.module.css
@@ -142,6 +142,12 @@
     z-index: 3;
   }
 
+  .navLink {
+    width: 100%;
+    text-align: left;
+    padding: 0.65rem 0.9rem;
+  }
+
   .open {
     opacity: 1;
     pointer-events: auto;
